--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <img src="./images/wahid-ari.jpg" alt="Wahid Ari" width="50" />
            </p>
             <h3>Wahid Ari</h3>
-             <p>5</p>
+             <p>Product helps you see how many 
+more days you need to work to 
+reach your financial goal.</p>
       </section>
     </main>
   </body>
